--- a/phone-list/phone-list.template.html
+++ b/phone-list/phone-list.template.html
@@ -2,13 +2,22 @@
     <div class="row">
         <div class="col-md-2">
             <!-- Sidebar content -->
-            Search: <input type="text" ng-model="$ctrl.query" />
+            <p>
+                Search: <input type="text" ng-model="$ctrl.query" />
+            </p>
+            <p>
+                Sorty by:
+                <select ng-model="$ctrl.orderProp">
+                    <option value="name">A - Z</option>
+                    <option value="age">Newest</option>
+                </select>
+            </p>
         </div>
         <div class="col-md-10">
             <!-- Body content -->
             
             <ul>
-                <li ng-repeat="phone in $ctrl.phones | filter: $ctrl.query">
+                <li ng-repeat="phone in $ctrl.phones | filter: $ctrl.query | orderBy: $ctrl.orderProp">
                     <span>{{ phone.name }}</span>
                     <p>{{ phone.snippet }}</p>
                 </li>
