--- a/phone-list/phone-list.template.html
+++ b/phone-list/phone-list.template.html
@@ -16,11 +16,14 @@
         <div class="col-md-10">
             <!-- Body content -->
             
-            <ul>
-                <li ng-repeat="phone in $ctrl.phones | filter: $ctrl.query | orderBy: $ctrl.orderProp">
-                    <span>{{ phone.name }}</span>
-                    <p>{{ phone.snippet }}</p>
-                </li>
+           <ul class="phones">
+               <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp" class="thumbnail">
+                   <a href="#/phones/{{phone.id}}" class="thumb">
+                       <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
+                   </a>
+                   <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+                   <p>{{phone.snippet}}</p>
+               </li>
             </ul>
             
         </div>
