--- a/phone-detail/phone-detail.template.html
+++ b/phone-detail/phone-detail.template.html
@@ -1,4 +1,6 @@
-<img ng-src="{{$ctrl.phone.images[0]}}" class="phone" />
+<a href="/">Home</a>
+<hr />
+<img ng-src="{{$ctrl.mainImageUrl}}" class="phone" />
 
 <h1>{{$ctrl.phone.name}}</h1>
 
@@ -6,7 +8,7 @@
 
 <ul class="phone-thumbs">
   <li ng-repeat="img in $ctrl.phone.images">
-    <img ng-src="{{img}}" />
+    <img ng-src="{{img}}" ng-click="$ctrl.setImage(img)" />
   </li>
 </ul>
 
